# 01_Projeto_academia

./: .gitignore  Desenvolvimento.ipynb  README.md  enviar_email.py  functions.py  mkdocs.yml  pyproject.toml
docs/: index.md
meu_projeto/: enviar_email.py
meu_projeto/scripts/: functions.py
notebooks/: Desenvolvimento.ipynb
