[tool.poetry]
name = "meu-projeto"
version = "0.1.0"
description = ""
authors = ["Espedito Ferreira Alves <espeditoalves123@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.11.2"
pywin32 = "^306"
openpyxl = "^3.1.2"
jupyter = "^1.0.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
