[tool.poetry]
name = "meu-projeto"
version = "0.1.0"
description = ""
authors = ["Espedito Ferreira Alves <espeditoalves123@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.11.2"
pywin32 = "^306"
openpyxl = "^3.1.2"
jupyter = "^1.0.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black" #Estou pedindo para o isort seguir o padrão do Black, para que não de conflito com o Blue.
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check . && isort --check ." # Ao chamar task lint, esses comandos serão executados.
